--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Activity6_PAM</string>
+    <string name="tdeletedata">Delete Data</string>
+    <string name="tsimpan">Sava</string>
+    <string name="tcancel">Cancel</string>
+    <string name="teditdata">Edit Data</string>
+    <string name="tnama">Nama</string>
+    <string name="tnotlp">No Telpon</string>
+    <string name="tcreatedata">Create Data</string>
+    <string name="tview">View</string>
 </resources>
